Using pkg-config and different versions

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,16 @@
-LIB_INTERFACE_VERSION=2:0:2
 ACLOCAL_AMFLAGS = -I m4
-lib_LTLIBRARIES = libsecretary.la
-libsecretary_la_SOURCES = list.c notebook.c parser.c project.c secretary.c task.c util.c secretary/list.h \
+lib_LTLIBRARIES = libsecretary-@API_VERSION@.la
+libsecretary_@API_VERSION@_la_SOURCES = list.c notebook.c parser.c project.c secretary.c task.c util.c secretary/list.h \
 		secretary/notebook.h secretary/parser.h secretary/project.h secretary/secretary.h secretary/task.h \
-		secretary/util.h secretary/_internal/secretary.h secretary/_internal/task.h
-libsecretary_la_includedir = $(includedir)/secretary
-libsecretary_la_include_HEADERS = secretary/list.h secretary/notebook.h secretary/parser.h secretary/project.h\
+		secretary/util.h secretary/_internal/secretary.h secretary/_internal/task.h  secretary/_internal/project.h
+libsecretary_@API_VERSION@_la_includedir = $(includedir)/secretary-@API_VERSION@/secretary
+libsecretary_@API_VERSION@_la_include_HEADERS = secretary/list.h secretary/notebook.h secretary/parser.h secretary/project.h\
 		 secretary/secretary.h secretary/task.h secretary/util.h
 
-libsecretary_la_LDFLAGS = -version-info $(LIB_INTERFACE_VERSION)
+libsecretary_@API_VERSION@_la_LDFLAGS = -version-info @INTERFACE_VERSION@
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libsecretary-@API_VERSION@.pc
 
 noinst_PROGRAMS = runtests
 runtests_SOURCES = test/runtests.c test/test_list.c test/test_notebook.c test/test_optimization_requisites.c\
@@ -17,7 +19,7 @@ runtests_SOURCES = test/runtests.c test/test_list.c test/test_notebook.c test/te
 		secretary/test/parser.h secretary/test/project.h secretary/test/secretary.h secretary/test/task.h \
 		secretary/test/util.h
 
-runtests_LDADD = libsecretary.la
+runtests_LDADD = libsecretary-@API_VERSION@.la
 runtests_LDFLAGS = -static
     
 
