--- a/libsecretary.pc.in
+++ b/libsecretary.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: libsecretary
 Description: A C library for managing to-do lists
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lsecretary
+Libs: -L${libdir} -lsecretary-@API_VERSION@
 Cflags: -I${includedir}/secretary-@API_VERSION@
